--- a/Nodejs/17-MongooseModel/17.1-product_model/package.json
+++ b/Nodejs/17-MongooseModel/17.1-product_model/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "mongoose": "^6.8.0"
+    "mongoose": "^6.8.0",
+    "validator": "^13.7.0"
   }
 }
